Fix language switcher and footer CTA alignment

--- a/css/main.css
+++ b/css/main.css
@@ -408,6 +408,8 @@ footer {
 }
 
 .footer-copy {
+  display: block;
+  width: 100%;
   text-align: center;
   margin-top: 28px;
 }
